--- a/wireframes/landing.html
+++ b/wireframes/landing.html
@@ -12,35 +12,91 @@
 	<link rel="stylesheet" href="../public/styles/styles.css">
 </head>
 <body>
+
 	<div class="jumbotron">
-		
 		<div class="text-center container-fluid">
 			<div class="row">
-				<div class="col-xs-1"></div>
-				<button class="col-xs-5 btn btn-default btn-lg">Log In</button>
-				<button class="col-xs-5 btn btn-default btn-lg">Register</button>
-				<div class="col-xs-1"></div>
+				<h1 class="col-xs-6 col-xs-offset-3">Working Title</h1>
+			</div>
+			<div class="row">
+				<div class=""></div>
+				<button class="col-sm-4 col-xs-8 col-sm-offset-1 col-xs-offset-2 btn btn-default btn-lg">Log In</button>
+				<button class="col-sm-4 col-xs-8 col-xs-offset-2 btn btn-default btn-lg">Register</button>
 			</div>
 		</div>
 	</div>
-	<nav class="navbar navbar-default navbar-collapse text-center">
-		<div class="container">
-			<div class="row">
-				<a class="col-sm-4 col-xs-12" href="#">link</a>
-				<a class="col-sm-4 col-xs-12" href="#">link</a>
-				<a class="col-sm-4 col-xs-12" href="#">link</a>
+
+	<div id="sign-in-form" class="container">
+		<form class="form-horizontal">
+			<div class="form-group">
+				<div class="col-xs-10">
+					<h1>Sign-In</h1>
+				</div>
+			</div>
+			<div class="form-group has-error">
+				<label class="control-label col-xs-2">Email</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="email" name="email" placeholder="Email">
+				</div>
+			</div>
+			<div class="form-group has-error">
+				<label class="control-label col-xs-2">Password</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="password" name="password" placeholder="Password">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-xs-2 col-xs-offset-2">
+					<input type="checkbox" name="remember-me">Remember Me
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-xs-2 col-xs-offset-2">
+					<button class="btn btn-default" type="submit" name="sign-in-btn">Sign In</button>
+				</div>
+			</div>
+		</form>
+	</div>
+
+	<div id="sign-up-form" class="container">
+		<form class="form-horizontal">
+			<div class="form-group">
+				<div class="col-xs-10">
+					<h1>Sign-Up</h1>
+				</div>
+			</div>
+			<div class="form-group has-error">
+				<label class="control-label col-xs-2">Email</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="email" name="email" placeholder="Email">
+				</div>
+			</div>
+			<div class="form-group has-error">
+				<label class="control-label col-xs-2">Password</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="password" name="password" placeholder="Password">
+				</div>
 			</div>
 
-
-		</div>
-	</nav>
+			<div class="form-group has-error has-success">
+				<label class="control-label col-xs-2">Summonner Name</label>
+				<div class="col-xs-9">
+					<input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-xs-2 col-xs-offset-2">
+					<input type="checkbox" name="remember-me">Remember Me
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-xs-2 col-xs-offset-2">
+					<button class="btn btn-default" type="submit" name="sign-up-btn">Sign Up</button>
+				</div>
+			</div>
+		</form>
+	</div>
 	
-	
-	<div class=""></div>
-	<div class=""></div>
-	<div class=""></div>
-
-
 <!-------------------- SCRIPTS -------------------------->
   <script
     src="http://code.jquery.com/jquery-3.2.1.min.js"
