continues work on wireframes

--- a/wireframes/champs.html
+++ b/wireframes/champs.html
@@ -16,7 +16,7 @@
 	<ul class="nav nav-tabs">
 		  <li role="presentation" class="dropdown">
 		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-		      Dropdown <span class="caret"></span>
+		      Endpoints <span class="caret"></span>
 		    </a>
 		    <ul class="dropdown-menu">
 			    <li><a href="#">Action</a></li>
@@ -26,14 +26,14 @@
 	    		<li><a href="#">Separated link</a></li>
 		    </ul>
 		  </li>
-		  <li role="presentation" class="">
-		  	<a href="#">Another</a>
+		  <li class="" role="presentation">
+		  	<a href="#">Profile</a>
 		  </li>
-		  <li role="presentation" class="">
-		  	<a href="#">Another</a>
+		  <li class="active" role="presentation">
+		  	<a href="#">Champions</a>
 		  </li>
-		  <li class="active" role="presentation" class="">
-		  	<a href="#">Another</a>
+		  <li class="" role="presentation">
+		  	<a href="#">Build(Coming Soon)</a>
 		  </li>
 	</ul>
 
