--- a/wireframes/landing.html
+++ b/wireframes/landing.html
@@ -18,83 +18,92 @@
 			<div class="row">
 				<h1 class="col-xs-6 col-xs-offset-3">Working Title</h1>
 			</div>
-			<div class="row">
-				<div class=""></div>
-				<button class="col-sm-4 col-xs-8 col-sm-offset-1 col-xs-offset-2 btn btn-default btn-lg">Log In</button>
-				<button class="col-sm-4 col-xs-8 col-xs-offset-2 btn btn-default btn-lg">Register</button>
-			</div>
 		</div>
 	</div>
+	<div class="container">
+	<div class="container">
+		<div class="row">
+			<div class="btn-group" data-toggle="button" aria-pressed="false">
+				<button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#sign-in-form" aria-expanded="false" aria-controls="sign-in-form">Log In</button>
+				<button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#sign-up-form" aria-expanded="false" aria-controls="sign-up-form">Register</button>
+			</div>	
+		</div>
+		<div class="row">
+				<div id="sign-in-form" class="container collapse">
+				<form class="form-horizontal">
+					<div class="form-group">
+						<div class="col-xs-10">
+							<h1>Sign-In</h1>
+						</div>
+					</div>
+					<div class="form-group has-error">
+						<label class="control-label col-xs-2">Email</label>
+						<div class="col-xs-9">
+							<input class="form-control" type="email" name="email" placeholder="Email">
+						</div>
+					</div>
+					<div class="form-group has-error">
+						<label class="control-label col-xs-2">Password</label>
+						<div class="col-xs-9">
+							<input class="form-control" type="password" name="password" placeholder="Password">
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-xs-2 col-xs-offset-2">
+							<input type="checkbox" name="remember-me">Remember Me
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-xs-2 col-xs-offset-2">
+							<button class="btn btn-default" type="submit" name="sign-in-btn">Sign In</button>
+						</div>
+					</div>
+				</form></div>
+			</div>
+				<div id="sign-up-form" class="container collapse">
+				<form class="form-horizontal">
+					<div class="form-group">
+						<div class="col-xs-10">
+							<h1>Sign-Up</h1>
+						</div>
+					</div>
+					<div class="form-group has-error">
+						<label class="control-label col-xs-2">Email</label>
+						<div class="col-xs-9">
+							<input class="form-control" type="email" name="email" placeholder="Email">
+						</div>
+					</div>
+					<div class="form-group has-error">
+						<label class="control-label col-xs-2">Password</label>
+						<div class="col-xs-9">
+							<input class="form-control" type="password" name="password" placeholder="Password">
+						</div>
+					</div>
 
-	<div id="sign-in-form" class="container">
-		<form class="form-horizontal">
-			<div class="form-group">
-				<div class="col-xs-10">
-					<h1>Sign-In</h1>
-				</div>
+					<div class="form-group has-error has-success">
+						<label class="control-label col-xs-2">Summonner Name</label>
+						<div class="col-xs-9">
+							<input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-xs-2 col-xs-offset-2">
+							<input type="checkbox" name="remember-me">Remember Me
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-xs-2 col-xs-offset-2">
+							<button class="btn btn-default" type="submit" name="sign-up-btn">Sign Up</button>
+						</div>
+					</div>
+				</form></div>
 			</div>
-			<div class="form-group has-error">
-				<label class="control-label col-xs-2">Email</label>
-				<div class="col-xs-9">
-					<input class="form-control" type="email" name="email" placeholder="Email">
-				</div>
-			</div>
-			<div class="form-group has-error">
-				<label class="control-label col-xs-2">Password</label>
-				<div class="col-xs-9">
-					<input class="form-control" type="password" name="password" placeholder="Password">
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-xs-2 col-xs-offset-2">
-					<input type="checkbox" name="remember-me">Remember Me
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-xs-2 col-xs-offset-2">
-					<button class="btn btn-default" type="submit" name="sign-in-btn">Sign In</button>
-				</div>
-			</div>
-		</form>
+		</div>
+
 	</div>
+	
 
-	<div id="sign-up-form" class="container">
-		<form class="form-horizontal">
-			<div class="form-group">
-				<div class="col-xs-10">
-					<h1>Sign-Up</h1>
-				</div>
-			</div>
-			<div class="form-group has-error">
-				<label class="control-label col-xs-2">Email</label>
-				<div class="col-xs-9">
-					<input class="form-control" type="email" name="email" placeholder="Email">
-				</div>
-			</div>
-			<div class="form-group has-error">
-				<label class="control-label col-xs-2">Password</label>
-				<div class="col-xs-9">
-					<input class="form-control" type="password" name="password" placeholder="Password">
-				</div>
-			</div>
-
-			<div class="form-group has-error has-success">
-				<label class="control-label col-xs-2">Summonner Name</label>
-				<div class="col-xs-9">
-					<input class="form-control" type="text" name="summoner-name" placeholder="Summonner Name">
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-xs-2 col-xs-offset-2">
-					<input type="checkbox" name="remember-me">Remember Me
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-xs-2 col-xs-offset-2">
-					<button class="btn btn-default" type="submit" name="sign-up-btn">Sign Up</button>
-				</div>
-			</div>
-		</form>
+	
 	</div>
 	
 <!-------------------- SCRIPTS -------------------------->
