--- a/wireframes/profile_home.html
+++ b/wireframes/profile_home.html
@@ -42,7 +42,6 @@
 			<h1 class="text-center">Summonner Name</h1>
 		</div></div>
 	
-
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-8 text-left">
@@ -80,30 +79,14 @@
 				</ul>
 					
 			</div>
-		</div>
-	</div>
+		</div></div>
+	
 	<hr>
+
 	<div class="container">
 		<div class="col-sm-12 text-center">
 			<button class="col-sm-6 col-sm-offset-3"><a href="./champs.html">Search Champions</a></button>
-		</div>
-	</div>
-
-
-	<div class=""></div>
-	<div class=""></div>
-	<div class=""></div>
-	<div class=""></div>
-	<div class=""></div>
-	<div class=""></div>
-
-
-
-
-
-
-
-
+		</div></div>
 
 <!-------------------- SCRIPTS -------------------------->
   <script
