--- a/wireframes/profile_home.html
+++ b/wireframes/profile_home.html
@@ -20,9 +20,13 @@
 		      Endpoints <span class="caret"></span>
 		    </a>
 		    <ul class="dropdown-menu">
-			    <li class=""><a href="#">Action</a></li>
+			    <li class=""><a href="#">GET</a></li>
+			    <li class=""><a href="#">/api</a></li>
+			    
+			    <li role="separator" class="divider"></li>
 	    		<li class=""><a href="#">Another action</a></li>
 	   			<li class=""><a href="#">Something else here</a></li>
+	    		
 	    		<li role="separator" class="divider"></li>
 	    		<li class=""><a href="#">Separated link</a></li>
 		    </ul>
