--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 
   <title>Landing</title>
 
-  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="../public/styles/reset.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="../public/styles/styles.css">
 </head>
 <body>
 
@@ -112,7 +112,7 @@
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
   </script>
   <script 
-    src="./scripts/app.js">
+    src="../public/scripts/app.js">
   </script>
 </body>
 </html>
