routes using user_controller

--- a/wireframes/profile_home.html
+++ b/wireframes/profile_home.html
@@ -37,9 +37,10 @@
 		<li role="presentation" class="">
 			<a href="#">Champions</a>
 		</li>
-		<li class="" role="presentation" class="">
+		<li class="" role="presentation">
 			<a href="#">...</a>
-		</li></ul>
+		</li>
+	</ul>
 
 	<div class="jumbotron">
 		<div class="container">
